; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_set_inquiry_state.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_set_inquiry_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inquiry_off = common dso_local global i32 0, align 4
@inquiry_running = common dso_local global i32 0, align 4
@commands = common dso_local global i32* null, align 8
@insert_position = common dso_local global i64 0, align 8
@HCI_INQUIRY_LAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @btpad_set_inquiry_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btpad_set_inquiry_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  store i32 %6, i32* @inquiry_off, align 4
  %7 = load i32, i32* @inquiry_off, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %18, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @inquiry_running, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %9
  %13 = load i32*, i32** @commands, align 8
  %14 = load i64, i64* @insert_position, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32, i32* @HCI_INQUIRY_LAP, align 4
  %17 = call i32 @btpad_queue_hci_inquiry(i32* %15, i32 %16, i32 3, i32 1)
  br label %18

18:                                               ; preds = %12, %9, %1
  ret void
}

declare dso_local i32 @btpad_queue_hci_inquiry(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
